# private-event-sourcing-zome

./: 404.html  Cargo.toml  README.md  flake.nix  hashmap.json  index.html  introduction.html  package.json  pnpm-lock.yaml  private-event-sourcing-store.html  setup.html
.github/workflows/: build-and-cache-zomes.yaml  publish-docs.yml  test.yaml
assets/: app.4JGIqvJT.js  app.B617RELt.js  app.BCJUfrnH.js  app.BsLi60hT.js  app.C1AeLXCG.js  app.C6cxggi4.js  app.CaFrFC-L.js  app.DD2SJZkZ.js  app.DXqVP1j0.js  app.Ddl6-zZc.js  app.DiVciKxc.js  app.DiyWXffB.js  app.DsQD9mCY.js  app.V-l-k-6S.js  app.gC4kVcUk.js  app.gp-3hUtZ.js  index.md.D_fi9quh.lean.js  introduction.md.CdEgxayv.lean.js  private-event-sourcing-store.md.OB6eUxDW.js  private-event-sourcing-store.md.OB6eUxDW.lean.js  public_backend_doc_static.files_SourceSerif4-LICENSE-3bb119e13b1258b7.md.CjNMBiR2.js  public_backend_doc_static.files_SourceSerif4-LICENSE-3bb119e13b1258b7.md.CjNMBiR2.lean.js  public_backend_doc_static.files_SourceSerif4-LICENSE-a2cfd9d5.md.52f-3gdB.js  public_backend_doc_static.files_SourceSerif4-LICENSE-a2cfd9d5.md.52f-3gdB.lean.js  setup.md.BI6rvQv5.js  setup.md.BI6rvQv5.lean.js  setup.md.C10CCt0M.js  setup.md.C10CCt0M.lean.js  setup.md.CekEhQaw.js  setup.md.CekEhQaw.lean.js  setup.md.Conb11VN.js  setup.md.Conb11VN.lean.js  setup.md.DnC_aMxD.js  setup.md.mtA7b7xu.js  setup.md.mtA7b7xu.lean.js  style.BclDVgSB.css  style.BukZ8p7V.css
assets/chunks/: @localSearchIndexroot.B9HUhBij.js  @localSearchIndexroot.Blz9G1pI.js  @localSearchIndexroot.Btzyu6r4.js  @localSearchIndexroot.CCoD5dVW.js  @localSearchIndexroot.CEhlNdnu.js  @localSearchIndexroot.CNby1nTp.js  @localSearchIndexroot.CWW6GAx0.js  @localSearchIndexroot.Cn77Heh3.js  @localSearchIndexroot.CyNnyO8D.js  @localSearchIndexroot.D79Y4xSD.js  @localSearchIndexroot.DEGqTATQ.js  @localSearchIndexroot.DSPgodWy.js  @localSearchIndexroot.Dhlm9c_g.js  @localSearchIndexroot.DnwlMK_7.js  @localSearchIndexroot.vdCx_MmK.js  VPLocalSearchBox.B-8cJzT_.js  VPLocalSearchBox.BVxHQ5Q1.js  VPLocalSearchBox.BZmxORwH.js  VPLocalSearchBox.Bm8139hn.js  VPLocalSearchBox.BtX6y_ZX.js  VPLocalSearchBox.CTA0gGmm.js  VPLocalSearchBox.Ca4soNLp.js  VPLocalSearchBox.Cjxam89Q.js  VPLocalSearchBox.D7T22_C-.js  VPLocalSearchBox.DGe7b2rm.js  VPLocalSearchBox.DavdwCZg.js  VPLocalSearchBox.Dv1wVeQw.js  VPLocalSearchBox.PlkqqxhC.js  VPLocalSearchBox.U_SmSSzd.js  VPLocalSearchBox.k0n52ruu.js  VPLocalSearchBox.xp8G8xFc.js  (+625 more)
backend/: .rustc_info.json
docs/: index.md  introduction.md  package.json  private-event-sourcing-store.md  setup.md
elements/: custom-elements.json
tests/: package.json  vitest.config.ts
ui/: custom-elements.json  package.json
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/encrypted_links/: Cargo.toml  zome.nix
zomes/coordinator/encrypted_links/src/: agent_encrypted_message.rs  lib.rs  utils.rs
zomes/coordinator/private_event_sourcing/: Cargo.toml
zomes/coordinator/private_event_sourcing/src/: acknowledgements.rs  agent_encrypted_message.rs  async_message.rs  awaiting_dependencies.rs  event_history.rs  events_sent_to_recipients.rs  lib.rs  linked_devices.rs  private_event.rs  send_events.rs  signed_entry.rs  synchronize.rs
(+760 files in other folders)
