[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/*", "zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.6"
hdk = { version = "0.5", features = ["unstable-functions"] }
serde = "1.0"
holochain_serialized_bytes = "*"

[workspace.dependencies.example]
path = "zomes/coordinator/example"

[workspace.dependencies.example_integrity]
path = "zomes/integrity/example"
