[package]
name = "private_event_sourcing"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "private_event_sourcing"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

private_event_sourcing_integrity = { path = "../../integrity/private_event_sourcing" }
linked_devices_types = { git = "https://github.com/darksoil-studio/linked-devices-zome", branch = "main-0.4" }
